# coding-game-manager

./: Makefile.am  configure.ac
data/: application.css  com.endlessm.Coding.Manager.data.gresource.xml  com.endlessm.Coding.Manager.service.in  com.endlessm.Mission.Manager.data.gresource.xml  inventory-bubble.ui  main.ui
debian/: changelog  control  copyright
src/: com.endlessm.Coding.Manager.in  com.endlessm.Coding.Manager.src.gresource.xml  com.endlessm.Mission.Manager.in  com.endlessm.Mission.Manager.src.gresource.xml  main.js  mylog.js  service.js
